--- a/style.css
+++ b/style.css
@@ -15,12 +15,29 @@
    --fw-semi-bold:500;
    --fw-bold:700;
 
-   -fs-300: .8125rem;
-   -fs-400: .875rem;
-   -fs-500: 1rem;
-   -fs-600: 1.875rem;
-   -fs-700: 2.5rem;
+   --fs-300: 0.8125rem;
+   --fs-400: 0.875rem;
+   --fs-500: 0.9375rem;
+   --fs-600: 1rem;
+   --fs-700: 1.875rem;
+   --fs-800: 2.5rem;
+   --fs-900: 3.5rem;
 
+   --fs-body:var(--fs-400);
+   --fs-primary-heading: var(--fs-800);
+   --fs-secondary-heading: var(--fs-700);
+   --fs-nav:var(--fs-500);
+   --fs-button:var(--fs-300);
+}
+
+@media (min-width:50em){
+   :root{
+      --fs-body:var(--fs-500);
+      --fs-primary-heading: var(--fs-900);
+      --fs-secondary-heading: var(--fs-800);
+
+      --fs-nav:var(--fs-300);
+   }
 }
 
 /* Box sizing rules */
@@ -28,8 +45,7 @@
 *::before,
 *::after {
    box-sizing: border-box;
-}
-
+ 
 /* Remove default margin */
 * {
    margin: 0;
