--- a/style.css
+++ b/style.css
@@ -102,3 +102,85 @@ svg {
       scroll-behavior: auto !important;
    }
 }
+}
+
+/* Utility classes */
+
+/* Text Color */
+.text-primary-400{
+   color: var(--color-primary-400);
+}
+.text-accent-400{
+   color: var(--color-accent-400);
+}
+.text-accent-100{
+   color: var(--color-accent-100);
+}
+.text-neutral-100{
+   color: var(--color-neutral-100);
+}
+.text-neutral-900{
+   color: var(--color-neutral-900);
+}
+
+
+/* Background Color */
+.bg-primary-400{
+   background-color: var(--color-primary-400);
+}
+.bg-accent-400{
+   background-color: var(--color-accent-400);
+}
+.bg-accent-100{
+   background-color: var(--color-accent-100);
+}
+.bg-neutral-100{
+   background-color: var(--color-neutral-100);
+}
+.bg-neutral-900{
+   background-color: var(--color-neutral-900);
+}
+
+
+
+/* Font weight */
+.fw-bold{
+   font-weight: var(--fw-bold);
+}
+
+.fw-semi-bold{
+   font-weight: var(--fw-semi-bold);
+}
+
+.fw-regular{
+   font-weight: var(--fw-regular);
+}
+
+.fw-primary-heading{
+   font-weight: var(--fs-primary-heading);
+}
+
+.fw-secondary-heading{
+   font-weight: var(--fs-secondary-heading);
+}
+
+/* font sizes */
+.fs-300{
+   font-size: var(--fs-300);
+}
+
+.fs-400{
+   font-size: var(--fs-400);
+}
+.fs-600{
+   font-size: var(--fs-600);
+}
+.fs-700{
+   font-size: var(--fs-700);
+}
+.fs-800{
+   font-size: var(--fs-800);
+}
+.fs-900{
+   font-size: var(--fs-900);
+}
